
		CHANGES in `multcomp' VERSION 1.2-21

    o    fix broken vignette PDF files

    o    remove all Rout.save files; these can be downloaded
         from R-forge.R-project.org now

		CHANGES in `multcomp' VERSION 1.2-20

    o    make sure to use par(no.readonly = TRUE)
         TH.data

		CHANGES in `multcomp' VERSION 1.2-19

    o    fix broken vignette PDFs

		CHANGES in `multcomp' VERSION 1.2-18

    o    improve plotting one-sided confidence intervals


		CHANGES in `multcomp' VERSION 1.2-17

    o    fix typo in DESCRIPTION file


		CHANGES in `multcomp' VERSION 1.2-16

    o    allow for levels with "-" and other special symbols for cld()

    o    fix cld(..., decreasing = TRUE) problem (thanks to Luciano Selzer)


		CHANGES in `multcomp' VERSION 1.2-15

    o    fix DESCRIPTION file entries


		CHANGES in `multcomp' VERSION 1.2-14

    o    catch download errors in vignette


		CHANGES in `multcomp' VERSION 1.2-13

    o    interaction terms can now be part of linear function


		CHANGES in `multcomp' VERSION 1.2-12

    o    model.matrix.polr returns intercept which needs to be removed


		CHANGES in `multcomp' VERSION 1.2-11

    o    handle merMod objects (package lme4 aka lme4Eigen)


		CHANGES in `multcomp' VERSION 1.2-10

    o    handle polr objects in package, not only in vignette

    o    move vignettes


		CHANGES in `multcomp' VERSION 1.2-9

    o    new coxme methods


		CHANGES in `multcomp' VERSION 1.2-8

    o    new argument `decreasing' for cld(), code donated
         by Luciano Selzer <luciano.selzer@gmail.com>


		CHANGES in `multcomp' VERSION 1.2-7

    o    new examples on 2-way ANOVA models, potentially with interactions,
         in vignette `multcomp-examples'


		CHANGES in `multcomp' VERSION 1.2-6

    o    `manual' na.omit before stepAIC is called in
          chfls1.Rnw vignette

    o    use lmrob.control(setting = "KS2011") in generalsiminf.Rnw


		CHANGES in `multcomp' VERSION 1.2-5
