@@ -1,7 +1,7 @@
 Package: multcomp
 Title: Simultaneous Inference in General Parametric Models
-Version: 1.2-22
-Date: 2013-10-02
+Version: 1.3-0
+Date: 2013-10-04
 Authors@R: c(person("Torsten", "Hothorn", role = c("aut", "cre"), 
                     email = "Torsten.Hothorn@R-project.org"), 
         person("Frank", "Bretz", role = "aut"), 
@@ -18,7 +18,7 @@ Depends: stats, graphics, mvtnorm (>= 0.8-0), survival (>= 2.35-7),
   sandwich, zoo
 Suggests: lme4 (>= 0.999375-16), nlme, robustbase, mboost, coin, MASS,
         car, foreign, xtable, lmtest, coxme (>= 2.2-1),
-        TH.data
+        TH.data, SimComp
 URL: The publishers web page is
         http://www.crcpress.com/product/isbn/9781584885740
 LazyData: yes
