@@ -1,4 +1,10 @@
 
+		CHANGES in `multcomp' VERSION 1.3-0
+
+    o    new glht method for multiple marginal models and corresponding
+         linear functions implements Pipper, Ritz, Bisgaard (2012),
+         see ?mmm
+
 		CHANGES in `multcomp' VERSION 1.2-21
 
     o    fix broken vignette PDF files
